# MetroHash

./: CMakeLists.txt  README.md
inc/metrohash/: MetroHash.h
src/: metrohash128.cpp  metrohash128crc.cpp  metrohash64.cpp  testvector.h
